--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vercel": "^49.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
